refactor: Java 25 modernization — records, sealed, pattern matching, Paper API, consistency
Java 25: GuiItem/NPCProfile/NPCDialogue/DamageModifier → records
Java 25: Version + HologramAnimation → sealed interfaces
Java 25: Pattern matching instanceof in version classes
Java 25: CommandManager if/else → Map lookup
Paper API: Remove legacy ChatColor from Config + ItemStackUtil
Paper API: Fix VFX effects plugin resolution (constructor injection)
Consistency: StarLogger adoption in 4 files
Consistency: List/Map.copyOf() in 7 sites
Consistency: Fix System.err.println → StarLogger in MinecraftRecipe
Records: withMessage/withName/withX/withZ/withType methods
Fix: PaginatedGui slotItems tracking
Bump to 1.3.0